--- a/resume/contact.html
+++ b/resume/contact.html
@@ -18,6 +18,7 @@
 			<a href="work.html"> Work Experiences</a> |
 			<a href="contact.html"> Contact!</a> |
 		</nav>
+		<img class="withAttributes" src="3.png" alt="myduckie" style="width: 350px; height: 400px;">
 		<table>
 			<tr>
 				<td class = "left-side">GMU Mail</td>
