--- a/resume/skill.html
+++ b/resume/skill.html
@@ -37,7 +37,14 @@
 					<li><a href="https://mason.gmu.edu/~tbui28/P5_213/contact-us.html">IT 113 Project</a> </li><br>
 					<li><a href="https://helios.vse.gmu.edu/~tbui28/IT207/labs/lab0/">IT 207 Project</a></li><br>
 					<li><a href="https://mason.gmu.edu/~tbui28/Project4/index.html">IT 331 Project</a></li><br>
-					</ul>
+				</ul>
+			<h3>Project this Spring 2024 semester</h3>
+				<div class="picture">
+					<img class="withAttributes" src="1.png" alt="Project492" style="width: 500px;"><br>
+					
+					<img class="withAttributes" src="2.png" alt="Project390" style="width: 500px;">
+				</div>
+			
 		</div>
 	<a href="resume.css">CSS link</a>
 	<footer>
